syntax = "proto3";

package message;

option go_package = "/message";

message Wrapper {
    oneof MessageType {
        ChangeDir changeDir = 1;
        DoDash doDash = 2;
        CreateBullet createBullet = 3;
        GameState gameState = 4;
        GameCount gameCount = 5;
        GameInit gameInit = 6;
        GameStart gameStart = 7;
    }
}

// server → client : init message
message GameInit {
    string id = 1;  // player id
}

// client → server : changing state
message ChangeDir {
    float angle = 1;
    bool isMoved = 2;
}

// server → client
message GameState {
    repeated PlayerState playerState = 1;
    repeated BulletState bulletState = 2;
    repeated HealPackState healPackState = 3;
}

message PlayerState {
    string id = 1;
    float x = 2;
    float y = 3;
    int32 health = 4;
}

message CreateBullet {
    string playerId = 1;
    float startX = 2;
    float startY = 3;
    float angle = 4;
}

message BulletState {
    string bulletId = 1;
    float x = 2;
    float y = 3;
}

message GameCount {
    int32 count = 1;
}

message DoDash {
    bool dash = 1;
}

message GameStart {
    bool start = 1;
}

message HealPackState {
    string itemId = 1;
    float x = 2;
    float y = 3;
}